# fractals

./: controller.py  node.py  rpath.html  style.css  view.html
node/: CMakeLists.txt  node.cpp  websocket.cpp  websocket.h
static/: rpath.js  style.css  view.js
